add communication page

--- a/presentations.html
+++ b/presentations.html
@@ -20,13 +20,9 @@
 	
 		<div class="collapse navbar-collapse" id="navbarColor02">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="about.html">About
-						<span class="sr-only">(current)</span>
-					</a>
-				</li>
+					<a class="nav-link" href="about.html">About</a>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Work</a>
+					<a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Work <span class="sr-only">(current)</span></a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="software.html">Software Development</a>
 						<a class="dropdown-item" href="research.html">Research</a>
@@ -77,6 +73,7 @@
 		<h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Documenting variation in a critically endangered language". SOAS Intro to Language Documentation course, December 2. <a href="https://www.academia.edu/44626126/Documenting_variation_in_a_critically_endangered_language" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Writing for the future of Ayapaneco: An orthography for heritage and new speakers of a critically endangered language". Foundation for Endangered Languages Annual Conference: FEL24, September 25. <a href="https://lt4all.elra.info/media/papers/O10/118.html" target="_blank"> [Available here]</a></p>
+		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Variations linguistiques dans les langues en danger (LED)". Viva l'ethnolinguistique, Université de Québec, May 25.</p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. Moderator, Expert Panel: "Threatened languages and language policies with aregional focus". International Congress of Languages at Risk. Los Pinos Cultural Complex, México, February 25-26. <a href="https://www.pscp.tv/w/1lDxLgEEVdoJm?t=1h20m20s" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. Moderator, Expert Panel: "Diversidad lingüística y lenguas en peligro". Celebración del Día Internacional de la Lengua Materna. Universidad Interculural del Estado de Tabasco, México, February 21. <a href="https://hal.archives-ouvertes.fr/hal-02488830" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. Poster: "Challenges for language technologies in Ayapaneco". International Conference LT4All. UNESCO, Paris, December 4-6. <a href="https://lt4all.elra.info/media/papers/P3/10.html" target="_blank"> [Available here]</a></p>
