add content to talks section

--- a/communication.html
+++ b/communication.html
@@ -82,6 +82,16 @@
 </div>
 <!-- END BLOG-->
 
+<!-- START TALKS-->
+
+<div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
+	<div class="card-body mb-3 mx-4">
+		<h2 class="card-title text-center text-danger my-0 reference-title mb-5">Talks</h2>
+		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. Conversatorio “Las artes verbales en la FLIN: Las lenguas en muy alto riesgo de desaparición a través de sus promotores”. Feria de las Lenguas Indígenas Nacionales 2020, INALI. August 11. <a href="https://www.youtube.com/watch?v=E_xNcnKuCMY" target="_blank"> [Available here]</a></p>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Language diversity in the world". Skype a Scientist, conversation with students of the Colegio Alemán Chicureo, Chile, August 5.</p>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "What's the role of a social scientist?". Skype a Scientist, conversation with students of the American School of Madrid, Spain. May 12.</p>
+</div>
+</div>
 
 
 
