--- a/presentations.html
+++ b/presentations.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/07ff07af43.js" crossorigin="anonymous"></script>
+	<link rel="icon" href="img/icon.png">
 	<title>Presentations & Publications</title>
 </head>
 <body>
