--- a/communication.html
+++ b/communication.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/07ff07af43.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="img/icon.png">
+  <link rel="icon" href="img/profile.png">
 	<title>Science Communication</title>
 </head>
 <body>
