add content to research section

--- a/research.html
+++ b/research.html
@@ -55,8 +55,23 @@
 	<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
 		<div class="card-body mb-3 mx-4">
 			<h2 class="card-title text-center text-danger mb-5">Positional verbs</h2>
-      <p class="card-text research-text">Positional verbs are common in the world’s languages. However, the study of highly specialized positional verbs is constrained by their relatively low occurrence in everyday use. To address the lack of suitable stimuli, especially for animated figures, as well as the low occurrence of tokens, I designed and tested my own set as part of my PhD research. This stimulus allowed me to a) collect tokens of previously undocumented positional verbs, and b) discover morpho-syntactic and semantic variation in their use.</p>
+      <p class="card-text research-text">Position is a notion common to all world languages. However, the study of highly specialized positional verbs is constrained by their relatively low occurrence in everyday use. To address the lack of suitable stimuli, especially for animated figures, as well as the low occurrence of tokens, I designed and tested my own set as part of my PhD research. This stimulus set allowed me to a) collect tokens of previously undocumented positional verbs, and b) discover morpho-syntactic and semantic variation in their use.</p>
   </div>
+</div>
+
+<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
+  <div class="card-body mb-3 mx-4">
+    <h2 class="card-title text-center text-danger mb-5">Speakerhood</h2>
+    <p class="card-text research-text">Who is a speaker of a given language? What makes him/her/they a speaker? Are there different types of speakers? Can we differentiate among different types of speakers? Can the speakers themselves tell the difference? </p>
+    <p class="card-text research-text">Through an interdisciplinary approach I attempt to respond to these questions. Their possible answers raise complex theoretical and methodological questions that challenge fundamental concepts for linguistics, such as linguistic competence. </p>
+</div>
+</div>
+
+<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
+  <div class="card-body mb-3 mx-4">
+    <h2 class="card-title text-center text-danger mb-5">Documentation & revitalization</h2>
+    <p class="card-text research-text">Through an interdisciplinary approach I attempt to respond to these questions that raise complex theoretical and methodological questions that challenge fundamental concepts for linguistics, such as linguistic competence.</p>
+</div>
 </div>
 
 
