add content to docu & rev  section

--- a/research.html
+++ b/research.html
@@ -70,7 +70,7 @@
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Documentation & revitalization</h2>
-    <p class="card-text research-text">Through an interdisciplinary approach I attempt to respond to these questions that raise complex theoretical and methodological questions that challenge fundamental concepts for linguistics, such as linguistic competence.</p>
+    <p class="card-text research-text"></p>
 </div>
 </div>
 
