--- a/research.html
+++ b/research.html
@@ -70,7 +70,29 @@
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Documentation & revitalization</h2>
-    <p class="card-text research-text"></p>
+    <p class="card-text research-text">Currently 10% of the world’s languages are critically endangered meaning that they will disappear in the next 5-10 years. These languages are low-resourced and very often under-documented. Through a collaborative approach I build robust, multimodal and multipurpose open access corpora allowing speech communities to undertake revitalization actions. I’m particularly interested in community-based revitalization efforts and their impact in the community, above and beyond a purely linguistic scope.</p>
+</div>
+</div>
+
+<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
+  <div class="card-body mb-3 mx-4">
+    <h2 class="card-title text-center text-danger mb-5">Language policies</h2>
+    <p class="card-text research-text">What’s an official/national language? What implications does the officiality of a language have? Who decides and how? How to accommodate the linguistic heterogeneity of a given territory through language policies? Do we even need language policies?</p>
+    <p class="card-text research-text">In my master’s dissertation I explore some of these questions, first through a macro-sociolinguistic case study and then through a micro-sociolinguistic case study examining the application of these policies on the ground. I’m particularly interested in exploring jure versus de facto in language planning.</p>
+</div>
+</div>
+
+<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
+  <div class="card-body mb-3 mx-4">
+    <h2 class="card-title text-center text-danger mb-5">NLP in low-resourced languages</h2>
+    <p class="card-text research-text">Currently 97% of the world’s languages are technologically low-resourced. This means that most of our existing language diversity falls outside the scope of language technologies. This situation perpetuates inequality among languages and people resulting in unequal access to information. I explore the intersection of language and tech, specifically speech processing for low-resourced languages.</p>
+</div>
+</div>
+
+<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
+  <div class="card-body mb-3 mx-4">
+    <h2 class="card-title text-center text-danger mb-5">Quantum language</h2>
+    <p class="card-text research-text">Can language be quantum native? If so, is it possible to develop a quantum theory of language, treating and processing it as a quantum object? What are the implications of language being quantum native? Recently I’ve begun exploring these questions from a broad linguistic, computer science and quantum physics perspective.</p>
 </div>
 </div>
 
