--- a/research.html
+++ b/research.html
@@ -127,6 +127,11 @@
 </footer>
 
 <!-- END FOOTER SECTION -->
+
+<!-- START TOP BUTTON -->
+<button type="button" class="btn btn-danger disabled" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<script src="app.js"> </script>
+<!-- END TOP BUTTON -->
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
