add community project content

--- a/community.html
+++ b/community.html
@@ -47,48 +47,47 @@
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Collaborative approach</h2>
-    <img src="img/community.jpg" class="rounded mx-auto d-block community-photo" alt="group"/>
-    <p class="card-text research-text">I have been an active collaborator in a community-driven documentation and revitalization project in rural Mexico for the last 7 years. This role has challenged me to fulfill multiple functions surpassing the traditional expectations of a researcher, such as language advocacy, government liaison, grant writing and fundraising for the community, capacity building, and heritage language pedagogy. Through this experience, I have applied my diverse language, scientific and interpersonal skills to multidisciplinary projects that are mutually beneficial for the local and scientific communities.</p>
+    <img src="img/community.jpg" class="rounded mx-auto d-block community-photo" alt="photo group"/>
+    <p class="card-text research-text">I have been an active collaborator in a community-driven documentation and revitalization project in rural Mexico since 2013. This role has challenged me to fulfill multiple functions surpassing the traditional expectations of a researcher such as language advocacy, government liaison, grant writing and fundraising for the community, capacity building, and heritage language pedagogy. Through this experience, I have applied my diverse language, scientific and interpersonal skills to multidisciplinary projects that are mutually beneficial for the local and scientific communities. </p>
   </div>
 </div>
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Documentation</h2>
-    <img src="img/docu.jpg" class="rounded mx-auto d-block community-photo" alt="group"/>
-    <p class="card-text research-text"></p>
+    <img src="img/docu.jpg" class="rounded mx-auto d-block community-photo" alt="documention project"/>
+    <p class="card-text research-text">Ayapaneco is a critically endangered language spoken by approximately 8 elders in southern Mexico, but current community-based efforts seek to reverse language loss. In 2020, we undertook the challenge of supporting these efforts through a collaborative and cross-disciplinary framework by producing the first open access documentary corpus of Ayapaneco. This is an ongoing community-driven documentation project supported by FONCA.</p>
   </div>
 </div>
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Practical orthography</h2>
-    <img src="img/orthography.JPG" class="rounded mx-auto d-block community-photo" alt="group"/>
-    <p class="card-text research-text">In 2019, the Ayapaneco speakers, the larger community and me rose to the challenge of developing the first practical orthography of the language that would facilitate, among other things, the development of pedagogical materials. This is an ongoing multifaceted process aimed at heritage speakers and at new speakers-to-be.</p>
+    <img src="img/orthography.JPG" class="rounded mx-auto d-block community-photo" alt="writing sample"/>
+    <p class="card-text research-text">In 2019, the Ayapaneco speakers, the larger community of Ayapa and I rose to the challenge of developing the first practical orthography of the language that would facilitate the development of pedagogical materials, among other outcomes. This is an ongoing multifaceted process aimed at heritage speakers and at new speakers-to-be that was supported by the ELF.</p>
   </div>
 </div>
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Revitalization</h2>
-    <img src="img/revitalization.jpg" class="rounded mx-auto d-block community-photo" alt="group"/>
-    <p class="card-text research-text"></p>
+    <img src="img/revitalization.jpg" class="rounded mx-auto d-block community-photo" alt="language class"/>
+    <p class="card-text research-text">I’m an expert and active participant in community-based revitalization efforts for critically endangered languages. My role goes beyond linguistic “expertise” and I get involved in many other aspects of community life based on their requests and needs. I believe that as linguists, we have a larger commitment to society and to the communities we interact with.</p>
   </div>
 </div>
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Capacity building</h2>
-    <img src="img/capacity.jpg" class="rounded mx-auto d-block community-photo" alt="group"/>
-    <p class="card-text research-text"></p>
+    <img src="img/capacity.jpg" class="rounded mx-auto d-block community-photo" alt="workshop"/>
+    <p class="card-text research-text">I offer training  for community members such as documentation, transcription, translation and language technologies. My ultimate goal is for community members to become local documenters and be able to direct their own revitalization efforts. I believe that capacity building is fundamental for any long-term language maintenance and revitalization project that has a real impact.</p>
   </div>
 </div>
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Want help?</h2>
-    <img src="img/capacity.jpg" class="rounded mx-auto d-block community-photo" alt="group"/>
-    <p class="card-text research-text"></p>
+    <p class="card-text research-text">Are you a community member thinking about undertaking a language project in your community and need help to kick start it? Feel free to reach out and I would happily help you and/or guide you in your process (free of charge, of course!)</p>
   </div>
 </div>
 <!-- END COMMUNITY PROJECTS-->
