add contact me on community

--- a/community.html
+++ b/community.html
@@ -88,6 +88,7 @@
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Want help?</h2>
     <p class="card-text research-text">Are you a community member thinking about undertaking a language project in your community and need help to kick start it? Feel free to reach out and I would happily help you and/or guide you in your process (free of charge, of course!)</p>
+    <a href="contact.html" class="btn btn-danger">Contact me</a>
   </div>
 </div>
 <!-- END COMMUNITY PROJECTS-->
