change about bacground & font

--- a/about.html
+++ b/about.html
@@ -48,21 +48,13 @@
 
 	<!-- START ABOUT SECTION-->
 
-
-
-
-<div class="card text-white transition mb-3 mx-auto" style="max-width: 100%;">
+<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
-		<h1 class="card-title text-center mb-5">ABOUT ME</h1>
-		<img src="img/profile-white.png" class="rounded mx-auto d-block" id="about-photo" alt="profile"/>
-		<p class="card-text font-about">Hi, I'm Jhonnatan, a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS) in Paris. I am a mixe-zoque specialist and my research focuses on variation, documentation and revitalization of critically endangered languages.</p>
-		<p class="card-text font-about">I am passionate about helping communities and organizations develop language and technology projects, and have been an active collaborator in a community-driven language project in rural Mexico since 2013. I'm an avid science communicator and firmly believe that science should be open to all and shared widely.</p>
-		<p class="card-text font-about">I love all things language, both human and computer, and my interests go beyond any one theory. I’ve been developing software since 2017 and am excited about the intersection of language and tech, specifically speech processing for low-resourced languages. I’m eager to connect with others who share these passions!</p>
+    <h2 class="card-title text-center text-danger mb-5">ABOUT ME</h2>
+    <img src="img/profile-white.png" class="rounded mx-auto d-block" id="about-photo" alt="profile"/>
+    <p class="card-text research-text">Hi, I'm Jhonnatan, a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS) in Paris. I am a mixe-zoque specialist and my research focuses on variation, documentation and revitalization of critically endangered languages. I am passionate about helping communities and organizations develop language and technology projects, and have been an active collaborator in a community-driven language project in rural Mexico since 2013. I'm an avid science communicator and firmly believe that science should be open to all and shared widely.I love all things language, both human and computer, and my interests go beyond any one theory. I’ve been developing software since 2017 and am excited about the intersection of language and tech, specifically speech processing for low-resourced languages. I’m eager to connect with others who share these passions!</p>
   </div>
 </div>
-
-
-
 
 <!-- END ABOUT SECTION-->
 
