--- a/fieldwork.html
+++ b/fieldwork.html
@@ -42,7 +42,7 @@
 <!-- END NAV -->
 
 
-<!-- START COMMUNITY PROJECTS-->
+<!-- START FIELDWORK PROJECTS-->
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
@@ -52,7 +52,7 @@
   </div>
 </div>
 
-<!-- END COMMUNITY PROJECTS-->
+<!-- END FIELDWORK PROJECTS-->
 
 
 <!-- START CONTACT SECTION -->
