--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,19 @@
 
 <!-- START CONTACT SECTION -->
 
-<section id="contact" class="contact-section">
+<section id="contact" class="contact-section mt-4">
   <div class="contact-section-header">
-    <h2>Let's chat...</h2>
+    <h2 class="text-danger">Let's chat!</h2>
   </div>
+</section>
+
+<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
+  <div class="card-body m-4">
+    <div class="typeform-widget" data-url="https://form.typeform.com/to/iRW7U1Ug?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 700px;"></div> 
+  </div>
+</div>
+
+<section id="contact" class="contact-section">
   <div class="contact-links">
     <a id="profile-link" href="https://github.com/jhon-ran" target="_blank" class="btn contact-details"><i class="fab fa-github"></i></a>
     <a href="https://twitter.com/Jo_ran_" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i></a>
@@ -61,6 +70,11 @@
 		<a href="https://inalco.academia.edu/jhonnatanrangel" target="_blank" class="btn contact-details"><i class="fas fa-font"></i></a>
   </div>
 </section>
+
+
+
+<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
 
 <!-- END CONTACT SECTION -->
 		
