uniform capital & lowercase

--- a/community.html
+++ b/community.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/07ff07af43.js" crossorigin="anonymous"></script>
 	<link rel="icon" href="img/profile.png">
-	<title>Community projects</title>
+	<title>Community Projects</title>
 </head>
 <body>
 
@@ -46,7 +46,7 @@
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
-    <h2 class="card-title text-center text-danger mb-5">Collaborative approach</h2>
+    <h2 class="card-title text-center text-danger mb-5">Collaborative Approach</h2>
     <img src="img/community.jpg" class="rounded mx-auto d-block community-photo" alt="photo group"/>
     <p class="card-text research-text">I have been an active collaborator in a community-driven documentation and revitalization project in rural Mexico since 2013. This role has challenged me to fulfill multiple functions surpassing the traditional expectations of a researcher such as language advocacy, government liaison, grant writing and fundraising for the community, capacity building, and heritage language pedagogy. Through this experience, I have applied my diverse language, scientific and interpersonal skills to multidisciplinary projects that are mutually beneficial for the local and scientific communities. </p>
   </div>
@@ -62,7 +62,7 @@
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
-    <h2 class="card-title text-center text-danger mb-5">Practical orthography</h2>
+    <h2 class="card-title text-center text-danger mb-5">Practical Orthography</h2>
     <img src="img/orthography.JPG" class="rounded mx-auto d-block community-photo" alt="writing sample"/>
     <p class="card-text research-text">In 2019, the Ayapaneco speakers, the larger community of Ayapa and I rose to the challenge of developing the first practical orthography of the language that would facilitate the development of pedagogical materials, among other outcomes. This is an ongoing multifaceted process aimed at heritage speakers and at new speakers-to-be that was supported by the ELF.</p>
   </div>
@@ -78,7 +78,7 @@
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
-    <h2 class="card-title text-center text-danger mb-5">Capacity building</h2>
+    <h2 class="card-title text-center text-danger mb-5">Capacity Building</h2>
     <img src="img/capacity.jpg" class="rounded mx-auto d-block community-photo" alt="workshop"/>
     <p class="card-text research-text">I offer training  for community members such as documentation, transcription, translation and language technologies. My ultimate goal is for community members to become local documenters and be able to direct their own revitalization efforts. I believe that capacity building is fundamental for any long-term language maintenance and revitalization project that has a real impact.</p>
   </div>
@@ -86,7 +86,7 @@
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
-    <h2 class="card-title text-center text-danger mb-5">Want help?</h2>
+    <h2 class="card-title text-center text-danger mb-5">Want Help?</h2>
     <p class="card-text research-text">Are you a community member thinking about undertaking a language project in your community and need help to kick start it? Feel free to reach out and I would happily help you and/or guide you in your process (free of charge, of course!)</p>
     <a href="contact.html" class="btn btn-danger">Contact me</a>
   </div>
