--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
 <section id="contact" class="contact-section mt-4">
   <div class="contact-section-header">
-    <h2 class="text-danger">Let's chat!</h2>
+    <h2 class="text-danger">Let's Chat!</h2>
   </div>
 </section>
 
