--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<!-- Masthead Avatar Image-->
 					<img class="masthead-avatar mb-5" src="img/profile.png" alt="profile" />
 					<!-- Masthead Heading-->
-					<h1 class="masthead-heading text-uppercase mb-0">Jhonnatan Rangel</h1>
+					<h1 class="masthead-heading mb-0">Jhonnatan Rangel</h1>
 					<!-- Icon Divider-->
 
 					<!-- Masthead Subheading-->
@@ -83,7 +83,7 @@
 
 <!-- START PROJECTS SECTION -->
 <section id="projects" class="projects-section">
-  <h2 class="projects-section-header text-danger">MY WORK</h2>
+  <h2 class="projects-section-header text-danger">My Work</h2>
   <div class="projects-grid">
     
     <a href="software.html" class="project project-tile" id="section-text">
