--- a/software.html
+++ b/software.html
@@ -50,7 +50,7 @@
 <section class="page-section portfolio" id="portfolio">
 		<div class="container">
 				<!-- Portfolio Section Heading-->
-				<h2 class="page-section-heading text-center text-uppercase text-danger mb-0">Web Dev Projects</h2>
+				<h2 class="page-section-heading text-center text-danger mb-0">Web Dev Projects</h2>
 				<!-- Icon Divider-->
 				<div class="divider-custom">
 						<div class="divider-custom-line"></div>
