--- a/presentations.html
+++ b/presentations.html
@@ -41,10 +41,12 @@
 	</nav>
 	<!-- END NAV -->
 
-  <form class="form-inline my-2 my-lg-0">
+  <!-- START RESEARCH BUTTON-->
+  <form class="form-inline my-2 my-lg-0" id="search-button">
     <input class="form-control mr-sm-2" id="filter" type="text" placeholder="Search">
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+    <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
   </form>
+  <!-- END RESEARCH BUTTON--->
 
 	<!-- START PUBLICATIONS-->
 
@@ -147,6 +149,7 @@
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
+  <!--Script fot search button-->
   <script src="jquery.js"> </script>
 <!--JQuery CDN-->
 
