remove search button

--- a/fieldwork.html
+++ b/fieldwork.html
@@ -48,7 +48,7 @@
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Fieldwork</h2>
     <img src="img/fieldwork2.Jpg" class="rounded mx-auto d-block community-photo" alt="photo group"/>
-    <p class="card-text research-text">I’m a seasoned field worker with 10 years of experience in southern Mexico. I've worked in small and medium sized rural communities with different degrees of multilingualism. I’ve worked with Maya and Mixe-Zoque speaking communities. Since 2012, I’ve been a permanent visitor to Ayapa, in Jalpa de Méndez Tabasco and surrounding communities.</p>
+    <p class="card-text research-text">I’m a seasoned field worker with 10 years of experience in Maya and Mixe-Zoque language communities of southern Mexico. I've worked in small and medium-sized rural communities with varying degrees of multilingualism. Since 2012, I’ve been a permanent visitor to Ayapa and surrounding communities in Jalpa de Méndez, Tabasco.</p>
   </div>
 </div>
 
