--- a/presentations.html
+++ b/presentations.html
@@ -43,8 +43,8 @@
 
   <!-- START RESEARCH BUTTON-->
   <form class="form-inline my-2 my-lg-0" id="search-button">
-    <input class="form-control mr-sm-2" id="filter" type="text" placeholder="Search">
-    <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
+    <input class="form-control mr-sm-2" id="filter" type="text" placeholder="Type to search">
+    <!--<button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>-->
   </form>
   <!-- END RESEARCH BUTTON--->
 
@@ -97,7 +97,7 @@
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2015. "La investigación-colaboración como acercamiento a una lengua en peligro de desaparición: el caso del ayapaneco". III Coloquio Internacional: Tendencias de la Investigación Antropológica e Histórica de Tabasco, Museo Regional de Antropología Carlos Pellicer Cámara, Tabasco, Mexico, November 30-December 4. <a href="https://hal.archives-ouvertes.fr/hal-01255354" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2015. "Variations linguistiques et langue en danger. Le cas du nuumte ode ou zoque ayapaneco dans l'état de Tabasco, Mexique". Journées doctorales de l’INALCO, Paris, March 19.</p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2015. "Retour d’expériences du terrain". Séminaire Pratiques langagières - terrains, méthodes, théories du SeDyL,campus CNRS de Villejuif, April 11.</p>
-		<p class="card-text reference-indent">Rangel, Jhonnatan. 2010. "Las políticas lingüística en el contexto diglósico mexicano". SCongreso internacional de políticas lingüísticas, Universidad Nacional Autónoma de México (UNAM), Yucatán, October 26-28.</p>
+		<p class="card-text reference-indent">Rangel, Jhonnatan. 2010. "Las políticas lingüística en el contexto diglósico mexicano". Congreso internacional de políticas lingüísticas, Universidad Nacional Autónoma de México (UNAM), Yucatán, October 26-28.</p>
 	</div>
 </div>
 </div>
