--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/07ff07af43.js" crossorigin="anonymous"></script>
 	<link rel="icon" href="img/profile.png">
-	<title>About me</title>
+	<title>Contact</title>
 </head>
 <body>
 
