add cotact message

--- a/software.html
+++ b/software.html
@@ -61,7 +61,7 @@
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
 												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
 										</div>
-										<img class="img-fluid" src="img/whispaw.jpg" alt="" />
+										<img class="img-fluid" src="img/whispaw.jpg" alt="whispaw" />
 								</div>
 						</div>
 						<!-- Portfolio Item 2-->
@@ -70,7 +70,7 @@
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
 												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
 										</div>
-										<img class="img-fluid" src="img/marketplace.jpg" alt="" />
+										<img class="img-fluid" src="img/marketplace.jpg" alt="chatons lovers store" />
 								</div>
 						</div>
 						<!-- Portfolio Item 3-->
@@ -79,7 +79,7 @@
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
 												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
 										</div>
-										<img class="img-fluid" src="img/yiadore.jpg" alt="" />
+										<img class="img-fluid" src="img/yiadore.jpg" alt="yi'adore store" />
 								</div>
 						</div>
 						<!-- Portfolio Item 4-->
@@ -88,7 +88,7 @@
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
 												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
 										</div>
-										<img class="img-fluid" src="img/divertiplay.jpg" alt="" />
+										<img class="img-fluid" src="img/divertiplay.jpg" alt="divertiplay" />
 								</div>
 						</div>
 						<!-- Portfolio Item 5-->
@@ -97,7 +97,7 @@
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
 												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
 										</div>
-										<img class="img-fluid" src="img/surfing.jpg" alt="" />
+										<img class="img-fluid" src="img/surfing.jpg" alt="surfing project" />
 								</div>
 						</div>
 						<!-- Portfolio Item 6-->
@@ -106,7 +106,7 @@
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
 												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
 										</div>
-										<img class="img-fluid" src="img/survey.jpg" alt="" />
+										<img class="img-fluid" src="img/survey.jpg" alt="survey form" />
 								</div>
 						</div>
 				</div>
@@ -114,6 +114,14 @@
 </section>
 
 <!-- END PORTFOLIO SECTION-->
+
+<div class="card  text-center mx-auto mb-5" style="max-width: 75rem">
+  <div class="card-body">
+    <h5 class="card-title">Do you have a tech project you want to bring to life?</h5>
+    <!--<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>-->
+    <a href="contact.html" class="btn btn-danger">Let's chat</a>
+  </div>
+</div>
 
 <!-- START PORTFOLIO MINI-->
 
